--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
     "expo": "~52.0.0",
+    "expo-asset": "^12.0.9",
+    "expo-font": "^14.0.9",
+    "expo-sqlite": "~15.0.3",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.3",
-    "expo-sqlite": "~15.0.3",
-    "react-native-safe-area-context": "4.12.0",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.11.0",
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "react-native-screens": "~4.1.0",
-    "react-native-gesture-handler": "~2.20.2",
-    "axios": "^1.7.7",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-svg": "15.8.0",
-    "@expo/vector-icons": "^14.0.4"
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
